src/components/List/components/public/ListTableHeaderSort/ListTableHeaderSort.module.scss
@use "../../../../../styles/_mixins.scss";

.list-table-header-sort.hide-label {
  width: var(--s-10);
}

.list-table-header-sort-label {
  min-width: max-content;
}

.list-table-header-sort-button {
  all: unset;
  cursor: pointer;
  cursor: pointer;
  position: relative;

  @include mixins.dimensions(var(--s-4), var(--s-4), true);

  & > svg[data-testid="icon"] {
    position: absolute;
    inset: 0;
    transition:
      fill 300ms var(--bezier),
      opacity 300ms var(--bezier);
  }

  & > svg[data-testid="icon"]:first-child {
    opacity: 1;
  }
  & > svg[data-testid="icon"]:last-child {
    opacity: 0;
  }

  &.inverted {
    & > svg[data-testid="icon"]:first-child {
      opacity: 0;
    }
    & > svg[data-testid="icon"]:last-child {
      opacity: 1;
    }
  }

  &.highlighted > svg[data-testid="icon"] {
    fill: var(--primary-base);
  }
}

